Kubernetes/Deployment.yml
apiVersion: app/v1
kind: Deployment
metadata:
  name: netflix app
  labels:
    app: netflix app
spec:
  replicas: 2
  selector:
    matchlabels:
      app: netflix app
  template:
    metadata:
      labels:
        app: netflix app
    spec:
      containers:
        - name: netflix-clone
          image: 078724664036.dkr.ecr.ap-south-1.amazonaws.com/netflix-cloneapp:94a0a191f7301aeca695040ed15b964dd10b7f0b
          ports:
            - containerPort: 80
