Kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
spec:
  type: ClusterIP
  selector:
    app: netflix-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
