Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  namespace: netflix-cloneapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: netflixclone.saidev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app-service
                port:
                  number: 80
<<<<<<< HEAD

=======
>>>>>>> b6620abf30a0dc4f02cddd43cdf39249c0d06f77
